--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -2865,6 +2865,43 @@
           :feature_type: admin
           :hidden: true
           :identifier: zone_delete
+    - :name: LDAP
+      :description: LDAP
+      :feature_type: node
+      :hidden: true
+      :identifier: ldap
+      :children:
+      - :name: Modify
+        :description: Modify a LDAP
+        :feature_type: admin
+        :identifier: ldap_admin
+        :hidden: true
+        :children:
+        - :name: Add
+          :description: Add a LDAP domain
+          :feature_type: admin
+          :hidden: true
+          :identifier: ldap_domain_add
+        - :name: Edit
+          :description: Edit a LDAP domain
+          :feature_type: admin
+          :hidden: true
+          :identifier: ldap_domain_edit
+        - :name: Delete
+          :description: Delete a LDAP domain
+          :feature_type: admin
+          :hidden: true
+          :identifier: ldap_domain_delete
+        - :name: Edit
+          :description: Edit a LDAP region
+          :feature_type: admin
+          :hidden: true
+          :identifier: ldap_region_edit
+        - :name: Delete
+          :description: Delete a LDAP region
+          :feature_type: admin
+          :hidden: true
+          :identifier: ldap_region_delete
     - :name: Regions
       :description: Regions
       :feature_type: node
@@ -6546,7 +6583,7 @@
     - :name: Switch Language
       :description: Display Language options
       :feature_type: view
-      :identifier: sui_language 
+      :identifier: sui_language
     - :name: Notifications
       :description: Display notifications
       :feature_type: view
@@ -6688,7 +6725,7 @@
       :description: View Orders
       :feature_type: node
       :identifier: sui_orders_display
-      :children:  
+      :children:
       - :name: Show
         :description: Display Orders
         :feature_type: view
@@ -6715,7 +6752,7 @@
     :description: Service Catalog features
     :feature_type: node
     :identifier: sui_svc_catalog
-    :children:   
+    :children:
     - :name: View
       :description: Display Service Catalog
       :feature_type: node
@@ -6729,7 +6766,7 @@
       :description: Catalog operations
       :feature_type: node
       :identifier: sui_svc_catalog_operations
-      :children:  
+      :children:
       - :name: Add to Shopping Cart
         :description: Add to Shopping Cart
         :feature_type: control
@@ -6752,7 +6789,7 @@
       :description: Shopping Cart operations
       :feature_type: node
       :identifier: sui_cart_operations
-      :children:    
+      :children:
       - :name: Clear
         :description: Clear cart
         :feature_type: control
