Change provision daialog "vLan" to "Virtual Network"

--- a/product/dialogs/miq_dialogs/miq_provision_dialogs_pre_sample.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_dialogs_pre_sample.yaml
@@ -63,7 +63,7 @@
 
       :display: :hide
     :network:
-      :description: vLan
+      :description: Virtual Network
       :fields: {}
 
       :display: :hide
