--- a/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
@@ -635,7 +635,7 @@
               :dvs: true
               :vlans: true
             :method: :allowed_vlans
-          :description: vLan
+          :description: Virtual Network
           :required: true
           :display: :edit
           :data_type: :string
