Set default values for help menu link target types in settings.yml
https://bugzilla.redhat.com/show_bug.cgi?id=1517908

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -799,11 +799,11 @@
     - SuspendVM_Task
 :help_menu:
   :documentation:
-    :enabled: true
+    :type: default
   :product:
-    :enabled: true
+    :type: new_window
   :about:
-    :enabled: true
+    :type: modal
 :host_delete:
   :queue_timeout: 20.minutes
 :host_introspect:
