Update Catalog tab of Publish VM dialog
Several changes were made to the Catalog tab of the publish-vm dialog.
The purpose of those changes is to describe the creation of the template
as the main goal of this dialog.

Fixes bugs:
https://bugzilla.redhat.com/show_bug.cgi?id=1518081
https://bugzilla.redhat.com/show_bug.cgi?id=1518077

--- a/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_clone_to_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_clone_to_template.yaml
@@ -178,11 +178,11 @@
             :method: :allowed_number_of_vms
           :description: Count
           :required: false
-          :display: :edit
+          :display: :hide
           :default: 1
           :data_type: :integer
         :vm_description:
-          :description: VM Description
+          :description: Template Description
           :required: false
           :display: :edit
           :data_type: :string
@@ -223,7 +223,7 @@
           :data_type: :boolean
         :seal_template:
           :description: Seal Template
-          :notes: (Applicable for non-Windows OS only)
+          :notes: (Linux only)
           :validation_method: :validate_seal_template
           :values:
             false: 0
@@ -233,7 +233,7 @@
           :default: false
           :data_type: :boolean
         :vm_name:
-          :description: VM Name
+          :description: Template Name
           :required_method: :validate_vm_name
           :required: true
           :notes:
