Renamed action to copy Service Dialog

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -2355,7 +2355,7 @@
         :description: Copy Dialog
         :feature_type: admin
         :hidden: true
-        :identifier: dialog_copy
+        :identifier: dialog_copy_editor
       - :name: Delete
         :description: Delete Dialog
         :feature_type: admin
