Handle console events
We need to make sure to handle console related events.

Bug-Url:
https://bugzilla.redhat.com/1518330

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -258,7 +258,11 @@
       - UserLoginSessionEvent
       - UserLogoutSessionEvent
       - VmAcquiredMksTicketEvent
+      - VM_CONSOLE_CONNECTED
+      - VM_CONSOLE_DISCONNECTED
       - VmRemoteConsoleConnectedEvent
+      - VM_SET_TICKET
+      - VM_SET_TICKET_FAILED
       :detail: []
       :name: Console Activity
     :deletion:
