Introduce $vcloud_log that logs into log/vcloud.log
With this commit we introduce yet another global logger that is to be used by
VMware provider. We're having quite some logs there and it's better to log them
into its own file.

Signed-off-by: Miha Pleško <miha.plesko@xlab.si>

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -882,6 +882,7 @@
   :level_scvmm: info
   :level_vim: warn
   :level_websocket: info
+  :level_vcloud: info
 :ntp:
   :server:
   - 0.pool.ntp.org
