Don't mention VmCloud in miq_expression.yml twice
VmCloud is just an alias for ManageIQ::Providers::CloudManager::Vm

--- a/product/reports/180_Configuration Management - Instances/010 Amazon - Active VMs.yaml
+++ b/product/reports/180_Configuration Management - Instances/010 Amazon - Active VMs.yaml
@@ -3,7 +3,7 @@ title: Amazon - Active VMs
 rpt_group: Custom
 rpt_type: Custom
 priority: 20
-db: VmCloud
+db: ManageIQ::Providers::CloudManager::Vm
 cols:
 - name
 - power_state
