Fixed product feature id for "Containers"
This was causing Containers Explorer to be available when user's role had any of the other features access under Containers main tab. Due to the same "Containers Explorer" node was missing from User Role edit/details screen.

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1510142

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -5063,7 +5063,7 @@
 - :name: Containers Explorer
   :description: Everything under Containers
   :feature_type: node
-  :identifier: containers
+  :identifier: container
   :children:
   - :name: Relationships
     :description: Everything under All Containers Accordion
