Fix MIQ Product Features yaml definition for Reorder Button Group
https://bugzilla.redhat.com/show_bug.cgi?id=1516836

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -2452,7 +2452,7 @@
           :hidden: true
           :identifier: ab_group_delete
         - :name: Reorder
-          :description: Buttons Groups
+          :description: Reorder Button Groups
           :feature_type: admin
           :hidden: true
           :identifier: ab_group_reorder
