Handle console events
We need to make sure to handle console related events.

Fixes https://bugzilla.redhat.com/1525583

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -317,6 +317,10 @@
       - UserLoginSessionEvent
       - UserLogoutSessionEvent
       - VmAcquiredMksTicketEvent
+      - VM_CONSOLE_CONNECTED
+      - VM_CONSOLE_DISCONNECTED
+      - VM_SET_TICKET
+      - VM_SET_TICKET_FAILED
       - VmRemoteConsoleConnectedEvent
       :detail: []
       :name: Console Activity
