--- a/db/fixtures/miq_searches.yml
+++ b/db/fixtures/miq_searches.yml
@@ -257,6 +257,23 @@
     search_type: default
     db: Host
 - attributes:
+    name: default_Platform / ESX 6.5
+    description: Platform / ESX 6.5
+    filter: !ruby/object:MiqExpression
+      exp:
+        and:
+        - "=":
+            field: Host-vmm_vendor
+            value: vmware
+        - INCLUDES:
+            field: Host-vmm_product
+            value: ESX
+        - "=":
+            field: Host-vmm_version
+            value: 6.5.0
+    search_type: default
+    db: Host
+- attributes:
     name: default_Platform / HyperV
     description: Platform / HyperV
     filter: !ruby/object:MiqExpression
