Fix wrong condition in reports: Pods Per Ready Status & Recently Discovered Pods

--- a/product/reports/170_Configuration Management - Containers/040_Recently Discovered Container Groups.yaml
+++ b/product/reports/170_Configuration Management - Containers/040_Recently Discovered Container Groups.yaml
@@ -19,7 +19,7 @@ headers:
 - Creation
 conditions: !ruby/object:MiqExpression
   exp:
-    IS NOT NULL:
+    IS NULL:
       field: ContainerGroup-deleted_on
       value:
 order: Descending
