--- a/product/reports/170_Configuration Management - Containers/060_Pods per Ready Status.yaml
+++ b/product/reports/170_Configuration Management - Containers/060_Pods per Ready Status.yaml
@@ -16,7 +16,7 @@ headers:
 - Ready Condition Status
 conditions: !ruby/object:MiqExpression
   exp:
-    IS NOT NULL:
+    IS NULL:
       field: ContainerGroup-deleted_on
       value:
 order: Ascending
