--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1024,6 +1024,8 @@
   :level_vim_in_evm: error
   :level_websocket: info
   :level_websocket_in_evm: error
+  :level_vcloud: info
+  :level_vcloud_in_evm: error
 :management_system:
   :power_operation_expiration: 10.minutes
 :performance:
