Purge orphans from VimPerformanceState
This uses the new "orhaned" purging mode to remove rows from
vim_performance_states which have dangling pointers

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1434918

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1048,6 +1048,9 @@
   :active_task_timeout: 6.hours
 :ui:
   :mark_translated_strings: false
+:vim_performance_states:
+  :history:
+    :purge_window_size: 1000
 :webservices:
   :consume_protocol: https
   :contactwith: ipaddress
