--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1209,6 +1209,7 @@
       :storage_file_collection_interval: 1.days
       :storage_file_collection_time_utc: 21600
       :task_timeout_check_frequency: 1.hour
+      :vim_performance_states_purge_interval: 1.day
       :vm_retired_interval: 10.minutes
       :yum_update_check: 12.hours
     :ui_worker:
