Rewords sui_orders_show to sui_orders_view, adds sui_services_view
Role evmgroup-desktop can't utilize service product features without sui_services_view product feature

--- a/db/fixtures/miq_user_roles.yml
+++ b/db/fixtures/miq_user_roles.yml
@@ -180,7 +180,7 @@
   - sui_vm_console
   - sui_vm_web_console
   - sui_vm_tags
-  - sui_orders_show
+  - sui_orders_view
 
 - :name: EvmRole-auditor
   :read_only: true
@@ -332,13 +332,14 @@
   - vm_shelve_offload
   - vm_timeline
   - vm_chargeback
+  - sui_services_view
   - sui_vm_details_view
   - sui_vm_console
   - sui_vm_web_console
   - sui_vm_start
   - sui_vm_stop
   - sui_vm_suspend
-  - sui_orders_show
+  - sui_orders_view
   - sui_orders_operations
 
 - :name: EvmRole-operator
@@ -725,7 +726,7 @@
   - sui_vm_console
   - sui_vm_web_console
   - sui_vm_tags
-  - sui_orders_show
+  - sui_orders_view
   - sui_orders_operations
 
 - :name: EvmRole-user_limited_self_service
@@ -918,7 +919,7 @@
   - sui_vm_start
   - sui_vm_stop
   - sui_vm_suspend
-  - sui_orders_show
+  - sui_orders_view
   - sui_orders_operations
 
 - :name: EvmRole-tenant_administrator
@@ -1254,4 +1255,4 @@
   - vm_snapshot_view
   - vm_view
   - sui_services_view
-  - sui_orders_show
+  - sui_orders_view
