--- a/config/settings.yml
+++ b/config/settings.yml
@@ -131,6 +131,7 @@
   :foreman_provisioning:
     :refresh_interval: 1.hour
   :full_refresh_threshold: 100
+  :invalid_authentication_grace_period: 15.minutes
   :raise_vm_snapshot_complete_if_created_within: 15.minutes
   :refresh_interval: 24.hours
   :scvmm:
