--- a/config/settings.yml
+++ b/config/settings.yml
@@ -89,6 +89,31 @@
     - Metric
     - MiqQueue
     - MiqWorker
+    :vacuum_schedule: "0 2 * * 6"
+    :vacuum_tables:
+    - Vm
+    - BinaryBlobPart
+    - BinaryBlob
+    - CustomizationSpec
+    - FirewallRule
+    - Host
+    - Storage
+    - MiqSchedule
+    - EventLog
+    - PolicyEvent
+    - Snapshot
+    - Job
+    - Network
+    - MiqQueue
+    - MiqRequestTask
+    - MiqWorker
+    - MiqServer
+    - MiqSearch
+    - MiqScsiLun
+    - MiqScsiTarget
+    - StorageFile
+    - Tagging
+    - VimPerformanceState
   :metrics_collection:
     :collection_schedule: "1 * * * *"
     :daily_rollup_schedule: "23 0 * * *"
