--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -6057,6 +6057,43 @@
     :feature_type: view
     :identifier: monitor_alerts_most_recent
 
+# Transformation Mappings
+- :name: Transformation Mappings
+  :description: Everything under Transformation Mappings
+  :feature_type: node
+  :identifier: transformation_mapping
+  :children:
+  - :name: View
+    :description: View Transformation Mapping
+    :feature_type: view
+    :identifier: transformation_mapping_view
+    :children:
+    - :name: List
+      :description: Display Lists of Transformation Mappings
+      :feature_type: view
+      :identifier: transformation_mapping_show_list
+    - :name: Show
+      :description: Display Individual Transformation Mappings
+      :feature_type: view
+      :identifier: transformation_mapping_show
+  - :name: Modify
+    :description: Modify Transformation Mappings
+    :feature_type: admin
+    :identifier: transformation_mappings_admin
+    :children:
+    - :name: Create Transformation Mapping
+      :description: Create Transformation Mapping
+      :identifier: tranformation_mapping_new
+      :feature_type: admin
+    - :name: Edit Transformation Mapping
+      :description: Edit Transformation Mapping
+      :identifier: tranformation_mapping_edit
+      :feature_type: admin
+    - :name: Delete Transformation Mapping
+      :description: Delete Transformation Mapping
+      :identifier: transformation_mapping_delete
+      :feature_type: admin
+
 # API
 - :name: API
   :description: Features Exclusive to the API
