--- a/db/fixtures/notification_types.yml
+++ b/db/fixtures/notification_types.yml
@@ -254,3 +254,13 @@
   :expires_in: 24.hours
   :level: :error
   :audience: global
+- :name: cloud_tenant_delete_success
+  :message: 'Deleting Cloud Tenant %{subject} completed successfully.'
+  :expires_in: 24.hours
+  :level: success
+  :audience: global
+- :name: cloud_tenant_delete_error
+  :message: 'Deleting Cloud Tenant %{subject} failed: %{error_message}'
+  :expires_in: 24.hours
+  :level: error
+  :audience: global
