Add default log level for automation & policy logs
Prior to a7ed2cbda9d2ff0b23e410401478f9dd8aa80b5e, all loggers would
have defaulted to `INFO` with or without the multicast logger.  The bug
that was fixed in that case is allowing the multicast logger to convert
the logger into `DEBUG` mode.

Unfortunately, two loggers weren't a part of the list of loggers that
then have user settings applied to them to change their default log
level:

- $miq_ae_logger
- $policy_log

Since both have been assumed to be `INFO` in the past, this change
makes that return to the previous behavior by default, and also has the
added bonus of allowing the user to change these settings via the
config.

Of note, the $policy_log was not the original target of the BZ that
prompted this change, but was added since it might also end up causing
issues down the road.

BZ link:  https://bugzilla.redhat.com/show_bug.cgi?id=1553813

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -915,6 +915,8 @@
   :level_websocket: info
   :level_vcloud: info
   :level_nuage: info
+  :level_automation: info
+  :level_policy: info
 :notifications:
   :history:
     :purge_window_size: 1000
