opens cap report filter fixup
use conditions instead of display_filter

--- a/product/reports/170_Configuration Management - Containers/130_Images by Failed OpenSCAP Rule Results.yaml
+++ b/product/reports/170_Configuration Management - Containers/130_Images by Failed OpenSCAP Rule Results.yaml
@@ -22,7 +22,16 @@ headers:
 - Rule Name
 - Result
 - Severity
-conditions:
+conditions: !ruby/object:MiqExpression
+  exp:
+    and:
+    - not:
+        "=":
+          field: ContainerImage.openscap_rule_results-result
+          value: pass
+    - IS NOT EMPTY:
+        field: ContainerImage.openscap_rule_results-name
+  context_type:
 order: Ascending
 sortby:
 - name
@@ -46,16 +55,7 @@ col_formats:
 -
 tz:
 time_profile_id:
-display_filter: !ruby/object:MiqExpression
-  exp:
-    and:
-    - not:
-        "=":
-          field: ContainerImage.openscap_rule_results-result
-          value: pass
-    - IS NOT EMPTY:
-        field: ContainerImage.openscap_rule_results-name
-  context_type:
+display_filter:
 col_options: {}
 rpt_options:
   :pdf:
