Fix tool tip while setting the ownership for VMs
BZ: https://bugzilla.redhat.com/show_bug.cgi?id=1549723

Fix tool tip which displayed html code while setting the ownership
for multiple VMs, in Compute > Infrastructure > Virtual Machines.

--- a/bower.json
+++ b/bower.json
@@ -56,12 +56,14 @@
     "spin.js": "~2.3.2",
     "sprintf": "~1.0.3",
     "tota11y": "~0.1.6",
-    "xml_display": "~0.1.1"
+    "xml_display": "~0.1.1",
+    "bootstrap-select": "1.12.2"
   },
   "resolutions": {
     "patternfly-bootstrap-treeview": "~2.1.1",
     "moment": ">=2.10.5",
     "d3": "~3.5.0",
-    "jquery": "~2.2.4"
+    "jquery": "~2.2.4",
+    "bootstrap-select": "1.12.2"
   }
 }
