Add detail and name to the new update event group
A new event group "update" was added for the amazon provider, we need to
also add the name and detail properties to the group in the main repo.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -781,6 +781,9 @@
       - USER_UPDATE_STORAGE_POOL_FAILED
       :detail: []
       :name: Storage
+    :update:
+      :detail: []
+      :name: Update
   :task_final_events:
     :ClusterCreatedEvent:
     - CreateClusterEx
