--- a/config/settings.yml
+++ b/config/settings.yml
@@ -967,6 +967,7 @@
 :container_entities:
   :history:
     :keep_archived_entities: 6.months
+    :keep_archived_quotas: 6.months
     :purge_window_size: 1000
 :product:
   :maindb: ExtManagementSystem
