--- a/db/fixtures/miq_searches.yml
+++ b/db/fixtures/miq_searches.yml
@@ -67,9 +67,13 @@
     description: Status / Running
     filter: !ruby/object:MiqExpression
       exp:
-        "=":
-          field: Vm-power_state
-          value: "on"
+        and:
+        - "=":
+            field: Vm-power_state
+            value: "on"
+        - "=":
+            field: Vm-active
+            value: "true"
     search_type: default
     db: Vm
 - attributes:
@@ -673,9 +677,13 @@
     description: Status / Running
     filter: !ruby/object:MiqExpression
       exp:
-        "=":
-          field: TemplateInfra-power_state
-          value: "on"
+        and:
+        - "=":
+            field: TemplateInfra-power_state
+            value: "on"
+        - "=":
+            field: VTemplateInfra-active
+            value: "true"
     search_type: default
     db: ManageIQ::Providers::InfraManager::Template
 - attributes:
@@ -1125,9 +1133,13 @@
     description: Status / Running
     filter: !ruby/object:MiqExpression
       exp:
-        "=":
-          field: VmInfra-power_state
-          value: "on"
+        and:
+        - "=":
+            field: VmInfra-power_state
+            value: "on"
+        - "=":
+            field: VmInfra-active
+            value: "true"
     search_type: default
     db: ManageIQ::Providers::InfraManager::Vm
 - attributes:
