Update the description of the chart_server_utilization widget

--- a/product/dashboard/widgets/chart_server_utilization.yaml
+++ b/product/dashboard/widgets/chart_server_utilization.yaml
@@ -1,4 +1,4 @@
-description: chart_server_health
+description: chart_server_utilization
 title: "Physical Server Utilization"
 content_type: chart
 options:
