--- a/product/reports/190_Configuration Management - Physical Servers/030_Server Availability.yaml
+++ b/product/reports/190_Configuration Management - Physical Servers/030_Server Availability.yaml
@@ -1,18 +1,20 @@
 ---
-title: Physical Server Utilization
+title: Physical Server Availability
 order: Ascending
 graph:
   :type: Pie
   :count: 10
   :other: true
-menu_name: Physical Server Utilization
+menu_name: Physical Server Availability
 rpt_group: Custom
 rpt_type: Custom
 priority:
 col_order:
 - hostname
+- v_availability
 - health_state
 - power_state
+- v_host_os
 - product_name
 timeline:
 file_mtime:
@@ -21,8 +23,10 @@ filename:
 db: PhysicalServer
 cols:
 - hostname
+- v_availability
 - health_state
 - power_state
+- v_host_os
 - product_name
 include:
   host:
@@ -30,18 +34,12 @@ include:
     - physical_server_id
 template_type: report
 sortby:
-- host.physical_server_id
+- v_availability
 - hostname
 headers:
 - Hostname
+- Availability
 - Health State
 - Power State
+- Host OS
 - Product Name
-conditions: !ruby/object:MiqExpression
-  exp:
-    or:
-      - IS NOT NULL:
-          field: PhysicalServer.host-physical_server_id
-      - IS NULL:
-          field: PhysicalServer.host-physical_server_id
-  context_type:
