Changing the description of the 'vlan' field in provision/network
The new description will improve the error message displayed when using
wrong vlan when provisioning a vm via the rest api.

Bug-Url: https://bugzilla.redhat.com/1541036

--- a/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_template.yaml
@@ -439,7 +439,7 @@
               :dvs: true
               :vlans: true
             :method: :allowed_vlans
-          :description: Network
+          :description: Virtual NIC Profile ID
           :required: true
           :display: :edit
           :default: <Template>
